# gw2-nexus-paths

./: .envrc  .gitignore  Cargo.toml  flake.nix  gw2-nexus-paths.code-workspace  mapDetails.json  rust-toolchain.toml
.github/workflows/: build.yaml
crates/addon/: Cargo.toml
crates/addon/src/: addon_def.rs  callbacks.rs  constants.rs  globals.rs  input_manager.rs  lib.rs  logger.rs  panic.rs  state.rs
crates/addon/src/callbacks/: identity_updated.rs  mod.rs  render.rs  toggle_ui.rs  window_resized.rs  wnd_proc.rs
crates/addon/src/renderer/: mod.rs  shaders.rs  ui.rs  world.rs
crates/addon/src/renderer/map/: mod.rs  trails.rs
crates/addon/src/state/: globals.rs  logic.rs  mod.rs
crates/api/: Cargo.toml  build.rs
crates/api/nexus-api/: Nexus.h
crates/api/src/: lib.rs  log.rs
crates/api/src/wrapper/: events.rs  key_binds.rs  mod.rs  render.rs  shortcuts.rs  wnd_proc.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: lib.rs  loadable.rs  markers.rs  points.rs  state.rs
crates/core/src/data/maps/: dimensions.rs  fetch.rs  mod.rs
crates/core/src/maps/: dimensions.rs  fetch.rs  mod.rs  shared_types.rs
crates/core/src/markers/: active.rs  mod.rs  packs.rs  parse_trail.rs  ramer_douglas_peucker.rs  tree.rs  xml.rs
crates/core/src/settings/: marker_categories.rs  mod.rs  version1.rs
crates/core/src/settings/trails/: color.rs  mod.rs  width.rs
crates/core/src/settings/versions/: v1.rs
crates/core/src/ui/: category_properties_window.rs  main_window.rs  marker_tree.rs  marker_tree_window.rs  mod.rs
crates/core/src/ui/utils/: mod.rs  plurals.rs  widgets.rs
crates/data/: Cargo.toml  build.rs  map-dimensions.json
crates/data/src/: lib.rs
crates/data/src/maps/: fetch.rs  mod.rs
crates/data/src/markers/: mod.rs  packs.rs  parse_trail.rs  points.rs  ramer_douglas_peucker.rs  trails.rs  tree.rs  xml.rs
crates/data/src/settings/: mod.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: lib.rs  map.rs  ui.rs  world.rs
crates/renderer/src/map/: mod.rs  trails.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs  maps.rs  markers.rs  points.rs
crates/types/src/settings/: mod.rs  version1.rs
crates/types/src/settings/trails/: color.rs  epsilon.rs  mod.rs  width.rs
crates/types/src/settings/versions/: mod.rs  v1.rs
src/: lib.rs  logger.rs  main.rs  state.rs
src/data/: coordinates.rs  map_dimensions.rs  marker_packs.rs  mod.rs  points.rs  rects.rs
src/nexus/: api.rs  events.rs  mod.rs
src/render/: map.rs  mod.rs  shaders.rs  world.rs
src/render/ui/: manager.rs  mod.rs
