[workspace]
members = [
  "crates/api"
, "crates/core"
, "crates/data"
, "crates/types"
]

[workspace.dependencies.serde]
version = "1.0"
features = [ "derive" ]

[workspace.dependencies.serde_json]
version = "1.0"


[package]
name = "paths"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies.api]
path = "crates/api"

[dependencies.paths_core]
path = "crates/core"

[dependencies.paths_data]
path = "crates/data"

[dependencies.paths_types]
path = "crates/types"

[dependencies.egui]
version = "0.28.1"

[target.'cfg(windows)'.dependencies.egui-directx11]
version = "0.5.0"

[dependencies.nary_tree]
version = "0.4.3"

[dependencies.quick-xml]
version = "0.36.1"

[dependencies.windows]
version = "0.58.0"
features = [
  "Foundation_Numerics",
  "Win32_Graphics_Direct2D",
  "Win32_Graphics_Direct2D_Common",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Direct3D_Fxc",
  "Win32_Graphics_Dxgi_Common",
  "Win32_System_LibraryLoader",
  "Win32_UI_WindowsAndMessaging",
]

[dependencies.windows-strings]
version = "0.1"

[dependencies.zip]
version = "2.2.0"
default-features = false
features = [ "deflate" ]
