[workspace]
default-members = [ "crates/addon" ]
members = [
  "crates/addon",
  "crates/api",
  "crates/core",
  "crates/data",
  "crates/renderer",
  "crates/types",
]
resolver = "2"

[workspace.dependencies.serde]
version = "1.0"
features = [ "derive" ]

[workspace.dependencies.serde_json]
version = "1.0"
