[package]
name = "paths_addon"
edition = "2021"


[features]
log_traces = [
  "api/log_location",
]


[lib]
name = "paths"
crate-type = [ "cdylib" ]


[dependencies.api]
path = "../api"

[dependencies.paths_core]
path = "../core"

[dependencies.paths_data]
path = "../data"

[dependencies.paths_renderer]
path = "../renderer"

[dependencies.paths_types]
path = "../types"

[dependencies.debounce]
version = "0.2.2"

[dependencies.egui]
version = "0.29.1"

[dependencies.log]
version = "0.4.22"
features = [
  "max_level_trace",
  "release_max_level_warn",
]

[dependencies.log_err]
version = "1.1.1"

[dependencies.windows]
version = "0.58.0"
features = [
  "Win32_Graphics_Dxgi",
  "Win32_UI_WindowsAndMessaging",
]
