[package]
name = "paths_addon"
edition = "2021"


[features]
log_traces = [
  "api/log_location",
]


[lib]
name = "paths"
crate-type = [ "cdylib" ]


[dependencies.api]
path = "../api"

[dependencies.paths_core]
path = "../core"

[dependencies.paths_types]
path = "../types"

[dependencies.debounce]
version = "0.2.2"

[dependencies.egui]
version = "0.28.1"

[dependencies.egui-directx11]
version = "0.5.0"

[dependencies.log]
version = "0.4.22"
features = [
  "max_level_trace",
  "release_max_level_warn",
]

[dependencies.log_err]
version = "1.1.1"

[dependencies.nalgebra]
version = "0.33.0"

[dependencies.windows]
version = "0.58.0"
features = [
  "Win32_Graphics_Direct2D_Common",
  "Win32_Graphics_Direct3D_Fxc",
  "Win32_Graphics_Dxgi",
  "Win32_UI_WindowsAndMessaging",
]

[dependencies.windows-strings]
version = "0.1"
