[package]
name = "paths_core"
edition = "2021"


[build-dependencies.phf_codegen]
version = "0.11.1"

[build-dependencies.serde]
version = "1.0"
features = [
  "derive",
]

[build-dependencies.serde_json]
version = "1.0"


[dependencies.api]
path = "../api"

[dependencies.egui]
version = "0.28.1"
features = [
  "serde",
]

[dependencies.log]
version = "0.4.22"

[dependencies.log_err]
version = "1.1.1"

[dependencies.nalgebra]
version = "0.33.0"

[dependencies.minreq]
version = "2.12.0"
features = [
  "https-native",
  "json-using-serde",
]

[dependencies.nary_tree]
version = "0.4.3"

[dependencies.nom]
version = "7.1.3"

[dependencies.phf]
version = "0.11.1"
default-features = false

[dependencies.serde]
version = "1.0"
features = [
  "derive",
]

[dependencies.serde_json]
version = "1.0"

[dependencies.windows]
version = "0.58.0"
features = [
  "Foundation_Numerics",
]

[dependencies.xml]
version = "0.8.20"

[dependencies.zip]
version = "2.2.0"
default-features = false
features = [
  "deflate",
]
