[package]
name = "paths_renderer"
edition = "2021"


[dependencies.api]
path = "../api"

[dependencies.paths_core]
path = "../core"

[dependencies.paths_data]
path = "../data"

[dependencies.paths_types]
path = "../types"

[dependencies.egui]
version = "0.29.1"

[dependencies.egui-directx11]
version = "0.6.0"

[dependencies.log]
version = "0.4.22"

[dependencies.log_err]
version = "1.1.1"

[dependencies.windows]
version = "0.58.0"
features = [
  "Win32_Graphics_Direct2D_Common",
  "Win32_Graphics_Direct3D_Fxc",
]

[dependencies.windows-strings]
version = "0.1"
